# RayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp  Ray.hpp  main.hpp
scripts/: fileGen.py
src/: Camera.cpp  Ray.cpp  main.cpp
